--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "autoprefixer": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-register": "^6.24.1",
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
@@ -28,5 +28,8 @@
   "browserslist": [
     "last 2 versions",
     "not ie <= 10"
-  ]
+  ],
+  "babel": {
+    "presets": ["env"]
+  }
 }
