--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^3.3.0",
     "postcss-custom-properties": "^6.1.0",
@@ -30,6 +29,8 @@
     "not ie <= 10"
   ],
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
