--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^3.3.0",
+    "gulp-sourcemaps": "^2.6.1",
     "postcss-custom-properties": "^6.1.0",
     "postcss-nesting": "^4.1.0"
   },
