--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rogers_CSR",
+  "name": "simple-starter",
   "version": "1.0.0",
   "description": "",
   "main": "bs-config.js",
@@ -12,9 +12,11 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-each": "^0.5.0",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-sourcemaps": "^2.6.1",
+    "marko": "^4.4.27",
     "postcss-custom-properties": "^6.1.0",
     "postcss-nesting": "^4.1.0"
   },
