--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-pug": "^3.3.0",
     "gulp-sourcemaps": "^2.6.1",
     "postcss-custom-properties": "^6.1.0",
-    "postcss-nesting": "^4.1.0"
+    "postcss-import": "^11.0.0",
+    "postcss-nested": "^2.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
